Allow to run SDK with JDK8
In order to allow to run SDK with JDK8 the multi-release jar has been created. In case SDK is used with JDK8 a user must add dependency to OkHttp or use its custom JavaRestClientFactory. When SDK is run on JDK11 then default JDK11 HttpClient will be used (no additional dependency needed)